# Tafiles

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  build.bat  prebuild.ps1
.opencode/plans/: ROADMAP.md  jis-tauri-plan.md
source/: build.bat  index.html  package-lock.json  package.json  preview.html  vite.config.js
source/src/: App.vue  main.js  preview-main.js  router.js
source/src-tauri/: Cargo.toml  tauri.conf.json
source/src-tauri/capabilities/: default.json
source/src-tauri/src/: commands.rs  lib.rs  webdav.rs
source/src/components/: ContextMenu.vue  FileBrowser.vue  FilePreview.vue  FileViewer.vue  ImageViewer.vue  PreviewPage.vue  TitleBar.vue  WebdavManager.vue
source/src/stores/: app.js  tabs.js  webdav.js
source/src/styles/: main.css
source/src/utils/: fileType.js
